# Blackbook-Marketplace

./: .gitignore  pyproject.toml
blackbook/: admin.py  models.py  urls.py  views.py
blackbook/migrations/: 0001_initial.py  0002_category.py
blackbook/static/css/: build.css
blackbook/static/js/: notatracker.js
blackbook/static/scss/: theme.scss
blackbook/templates/: base-error.html  base-generic.html  index.html  item.html
django/blackbook/: apps.py  urls.py
django/blackbook/static/css/: build.css.map
django/blackbook/templates/: base-error.html
django/main/: urls.py
main/: settings.py
static/: staticfiles.json
static/admin/css/: changelists.css.br  forms.css.br  rtl.css.br
static/css/: base.css.br  build.22663834ad8f.css  build.22663834ad8f.css.br  build.a03748ea4c06.css  build.a03748ea4c06.css.br  build.css.br  build.css.map.br  error.4fdbc2b9d439.css  error.4fdbc2b9d439.css.br  error.css.br
static/font/: urw-form-semicond-extra-bold.ttf.br
static/js/: index.92f1290a07e1.js  index.js.br  notatracker.801e91fe9c1f.js.br  notatracker.js
static/scss/: theme.8ae4744f2c0f.scss.br  theme.944ca653fc3b.scss  theme.944ca653fc3b.scss.br  theme.scss
