[tool.poetry]
name = "Blackbook-Marketplace"
version = "0.1.0"
description = "A clone of Facebook marketplace, because I'm bored"
authors = ["tomgxz <tomgxz.dev@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://blackbook-marketplace.tomgxz.repl.co/"
repository = "https://github.com/Tomgxz/Blackbook-Marketplace"
keywords = ["html","django","scss"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.25"
whitenoise = "^6.5.0"
geopy = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"